--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "practical-pytorch"]
 	path = practical-pytorch
 	url = https://github.com/spro/practical-pytorch
+[submodule "t81_558_deep_learning"]
+	path = t81_558_deep_learning
+	url = https://github.com/jeffheaton/t81_558_deep_learning.git
